--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <p>- Создание модернизация и поддержка внутрикорпоративных сетей;</p>
               <p>- Проведение технических переговоров с заказчиками и субподрядчиками;</p>
               <p>- Проведение необходимых расчетов и подбора оборудования;</p>
-              <p>- Монтаж - демонтаж, включение и настройка охранного видеообору-дования, а также его дальнейшее обслуживание.</p>
+              <p>- Монтаж - демонтаж, включение и настройка охранного видеооборудования, а также его дальнейшее обслуживание.</p>
               
             </div>
 			
