--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Ильичев Вячеслав</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://t.me/ilichevslsva" class="telegram"><i class="bx bxl-telegram"></i></a>
+          <a href="https://t.me/ilichevslava" class="telegram"><i class="bx bxl-telegram"></i></a>
           <a href="https://vk.com/feed" class="vk"><i class="bx bxl-vk"></i></a>
           <a href="https://github.com/ilichevslava-qa" class="github"><i class="bx bxl-github"></i></a>          
         </div>
@@ -117,7 +117,7 @@
               <div class="col-lg-6">
                 <ul>        
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>iliva254@yandex.ru</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Телеграм:</strong> <span>https://t.me/ilichevslsva</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Телеграм:</strong> <span>https://t.me/ilichevslava</span></li>
                 </ul>
               </div>
             </div>
