--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -60,7 +60,7 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Ильичев Вячеслав</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://t.me/ilichevslsva" class="telegram"><i class="bx bxl-telegram"></i></a>
+          <a href="https://t.me/ilichevslava" class="telegram"><i class="bx bxl-telegram"></i></a>
           <a href="https://vk.com/feed" class="vk"><i class="bx bxl-vk"></i></a>
           <a href="https://github.com/ilichevslava-qa" class="github"><i class="bx bxl-github"></i></a>          
         </div>
