--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -129,7 +129,7 @@
               <ul>
                 <li><strong>Категория</strong>: Тестировщик ПО</li>
                 <li><strong>Клиент</strong>: Кампания</li>
-                <li><strong>Дата проекта</strong>: 29 March, 2024</li>
+                <li><strong>Дата проекта</strong>: 29 марта, 2024</li>
                 <li><strong>Ссылка на проект</strong>: <a href="#">ссылка будет позже</a></li>
               </ul>
             </div>
