--- a/inner-page.html
+++ b/inner-page.html
@@ -23,7 +23,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Внутренняя страница - загрузочный шаблон портфолио</title>
+  <title>Сайт визитка Ильичева Вячеслава</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
