--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -23,7 +23,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Подробная информация о портфолио - шаблон начальной загрузки портфолио</title>
+  <title>Сайт визитка Ильичева Вячеслава</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
