--- a/index.html
+++ b/index.html
@@ -522,74 +522,38 @@
       </div>
     </section><!-- End Testimonials Section -->
 
+
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
-          <h2>Контакты</h2>         
+          <h2>Контакты</h2>
+          <p>С радостью отвечу на все ваши звонки и письма!!!</p>
         </div>
 
-        <div class="row" data-aos="fade-in">
-
-          <div class="col-lg-5 d-flex align-items-stretch">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Месторасположение:</h4>
-                <p>Россия, Санкт-Петербург</p>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>iliva254@yandex.ru</p>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Тел:</h4>
-                <p>+7 931 275 35 40</p>
-              </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d511641.75698098977!2d29.435313916970852!3d59.9387691466896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696378cc74a65ed%3A0x6dc7673fab848eff!2z0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LM!5e0!3m2!1sru!2sru!4v1712294501649!5m2!1sru!2sru" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-
+        <div class="row">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+            <div class="icon"><i class="bi bi-geo-alt"></i></div>
+            <h4 class="title"><a href="">Месторасположение:</a></h4>
+            <p class="description">Россия, Санкт-Петербург</p>
           </div>
-
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Ваше Ф.И.О.</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Ваш Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Тема вопроса</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Ваше сообщение</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Загрузка</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Ваше сообщение отправлено. Спасибо!</div>
-              </div>
-              <div class="text-center"><button type="submit">Отправить сообщение</button></div>
-            </form>
+    	  		  
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon"><i class="bi bi-envelope"></i></div>
+            <h4 class="title"><a href="">Email:</a></h4>
+            <p class="description">iliva254@yandex.ru</p>
           </div>
-
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon"><i class="bi bi-phone"></i></div>
+            <h4 class="title"><a href="">Тел:</a></h4>
+            <p class="description">+7 931 275 35 40</p>
+          </div>
+ 
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section><!-- End Contact Section -->	
 
   </main><!-- End #main -->
 
