--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               <ul>
                 <li>Россия, г. Санкт-Петербург</li>
                 <li>+7 931 275 35 40</li>
-                <li>iliva254@yandex</li>
+                <li>iliva254@yandex.ru</li>
               </ul>
             </div>
 
