--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             <h4 class="title"><a href="">Тел:</a></h4>
             <p class="description">+7 931 275 35 40</p>
           </div>
-          <img src="assets/img/testing-1.jpg" alt="" class="img-fluid rounded">
+          <img src="assets/img/qa-engineer.jpg" alt="" class="img-fluid rounded">
         </div>
 
       </div>
