--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Ильичев Вячеслав</h1>
-      <p>Я — <span class="typed" data-typed-items="QA engineer, Тестировщик ПО"></span></p>
+      <p>Я — <span class="typed" data-typed-items="QA Engineer, Тестировщик ПО"></span></p>
     </div>
   </section><!-- End Hero -->
 
