--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <h4>Ильичев Вячеслав</h4>
               <p><em></em></p>
               <ul>
-                <li>Россия, г. Санкт-Петербург</li>
+                <li>Россия, г. Москва</li>
                 <li>+7 931 275 35 40</li>
                 <li>iliva254@yandex.ru</li>
               </ul>
