--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Опыт работы (2 года 9 месяцев)</h3>
+            <h3 class="resume-title">Опыт работы (4 года 2 месяца)</h3>
             <div class="resume-item pb-0">
               <h4>Ильичев Вячеслав</h4>
               <p><em></em></p>
