--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-envelope"></i></div>
             <h4 class="title"><a href="">Email:</a></h4>
-            <p class="description">iliva254@yandex.ru</p>
+            <p class="description">iliva254@list.ru</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-phone"></i></div>
