Заменил почтовый адрес

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Опыт работы (4 года 2 месяца)</h3>
             <div class="resume-item pb-0">
-              <h4>Ильичев Вячеслав</h4>
+              <h4>Ильичев Слава</h4>
               <p><em></em></p>
               <ul>
                 <li>Россия, г. Москва</li>
